fix truncate style

--- a/app/assets/stylesheets/item.scss
+++ b/app/assets/stylesheets/item.scss
@@ -1,11 +1,12 @@
 .item-list {
+  margin: 0 5px;
 }
 
 .item {
   display: flex;
   align-items: center;
-  height: 80px;
-  margin-bottom: 20px;
+  height: 75px;
+  margin-bottom: 10px;
 
   .info {
     width: 100%;
